--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,9 @@ checkstyle {
 // Configure SpotBugs
 /////////////////////////////////////////////////////////////////////////
 // To generate an HTML report instead of XML
-// tasks.withType(com.github.spotbugs.SpotBugsTask) {
-//   reports {
-//     xml.enabled = false
-//     html.enabled = true
-//   }
-// }
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+   reports {
+     xml.enabled = false
+     html.enabled = true
+   }
+ }
