--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ run{
 // In this section you declare the dependencies for your production and test code
 dependencies {
     compile "junit:junit:4.12"
-    compile files('cls/')
+    implementation 'junit:junit:4.12'
 }
 
 ///////////////////////////////////////////////////////////////////////
@@ -44,7 +44,7 @@ checkstyle {
    }
  }
  checkstyle {
-     toolVersion = "8.3"
+     toolVersion = "8.8"
  }
 
 
